# marginalia

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: obsidian-tag-colors.md
levi_md/: __init__.py  brain.py  cli.py  index_builder.py  obsidian.py  scanner.py
marginalia/: cli.py  closeout.py  config.py  index_builder.py  scanner.py
obsidian-plugin/: README.md  main.js  manifest.json  package-lock.json  package.json  styles.css
obsidian-plugin/src/: main.ts
src/marginalia/: __init__.py  __main__.py  brain.py  canonical.py  chronicle_compiler.py  cli.py  closeout.py  config.py  discovery.py  eval.py  fixer.py  graph_export.py  handoff_validator.py  index_builder.py  layer.py  linker.py  mcp_server.py  metadata.py  obsidian.py  operator.py  scanner.py  schema.py  session_close.py  tags.py  types.py  validators.py
tests/: test_canonical.py  test_closeout.py  test_eval.py  test_ew_aware_links.py  test_fixer_giro7.py  test_handoff_validator.py  test_layer_budget.py  test_linker.py  test_nonna_standard.py  test_operator.py  test_rubric_5d.py  test_scanner.py  test_schema.py  test_types.py  test_validators.py
