[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "levi-md"
version = "0.1.0"
description = "Markdown vault quality scanner for Obsidian, academics, and documentation teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "EasyWay Data", email = "info@easywaydata.com"},
]
keywords = ["markdown", "obsidian", "vault", "documentation", "linting", "frontmatter", "tags"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
levi = "levi_md.cli:main"

[project.urls]
Homepage = "https://github.com/easyway-data/levi-md"
Issues = "https://github.com/easyway-data/levi-md/issues"
