[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marginalia"
version = "0.1.0"
description = "Markdown vault quality scanner for Obsidian, academics, and documentation teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "hale-bopp-data", email = "info@easywaydata.com"},
]
keywords = ["markdown", "obsidian", "vault", "documentation", "linting", "frontmatter", "tags", "pkm", "knowledge-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]

[project.scripts]
marginalia = "marginalia.cli:main"

[project.urls]
Homepage = "https://github.com/hale-bopp-data/marginalia"
Repository = "https://github.com/hale-bopp-data/marginalia"
"Bug Tracker" = "https://github.com/hale-bopp-data/marginalia/issues"
